--- a/src/assets/css/single-project.sass
+++ b/src/assets/css/single-project.sass
@@ -5,6 +5,7 @@
    background-repeat: no-repeat
    background-size: cover
    margin-bottom: $offset-block
+   color: $white
    &__overlay
       position: absolute
       width: 100%
@@ -34,7 +35,7 @@
    +shift-left(1)
    +size-xl(12)
    +shift-xl-left(0)
-
+   
    &__content   
       +row-flex()
       h3
@@ -46,6 +47,7 @@
    +col()
    +u-size(3, 11, 20px)
    +size-md(6)
+   color: $white
    height: 300px
    border-radius: 10px
    background-size: cover
