--- a/src/assets/css/blocks/naviagtion.sass
+++ b/src/assets/css/blocks/naviagtion.sass
@@ -16,7 +16,8 @@
 .logo
    +col()
    +size(2)
-   +sm(display, none)
+   // +sm(display, none)
+   +size-sm(6)
    &_mobile
       display: none
       +col()
@@ -66,12 +67,13 @@
       display: none
    &__wrapper
       +row-flex
+      align-items: flex-end
    &__item
       +col()
-      +u-size(1,4,20px)
+      +u-size(1.3,7,20px)
 
       &_blog
-         +u-size(2,7,20px)
+         +u-size(3.1,7,20px)
 
    &__title
       font: $text
@@ -89,9 +91,18 @@
       display: flex
       flex-direction: column
       position: relative
-      a
-         font-weight: bold
-         padding: 10px 0px
+      a  
+         +font-text-bold()       
+         padding: 5px 0px
+         display: block         
+         opacity: .5
+         &:hover
+            // box-shadow: inset 0px -1px 0px 0px rgba(255,255,255,0.34)  
+            // color: $architect-red               
+      .slick-current:nth-child(2)
+         opacity: 1
+      .slick-current + .slick-slide 
+         opacity: 1                        
       &::after
          content: ""
          width: 24px
@@ -101,7 +112,7 @@
          left: -26px
          background-size: contain
          background-repeat: no-repeat
-         bottom: 0px
+         bottom: -6px
    &_white
       +size(12)
       padding: 24px
@@ -159,7 +170,7 @@
    display: flex
    background: #000000
    height: $fix100vh
-   position: absolute
+   position: fixed
    width: 100%
    top: -100%
    opacity: 0
